--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "chat-app-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,6 @@
     "express": "^4.19.2",
     "sqlite3": "^5.1.7",
     "ws": "^8.17.1"
-  }
+  },
+  "description": ""
 }
